First try to fix dbl tap touch zoom functionality on iPhone v1.5.8

--- a/src/app/heart/heart.component.scss
+++ b/src/app/heart/heart.component.scss
@@ -18,6 +18,8 @@ $heart: #db0e0e;
   transform: rotate(-45deg);
   animation: pulse 1s infinite;
   box-shadow: 0 0 20px 2px $heart;
+  touch-action: manipulation;
+  -ms-touch-action: manipulation;
 }
 .heart::before,
 .heart::after {
